# QuaCode-SIBus

./: .gitignore  CMakeLists.txt
examples/: baker-dbh-queues.cpp  baker-dbh-queues2.cpp  baker-dbh.cpp  baker-queues.cpp  baker-queues2.cpp  baker.cpp  connect-four.cpp  disjunction.cpp  matrix-game-dbh.cpp  matrix-game.cpp  nim-fibo-dbh.cpp  nim-fibo.cpp  qbf.cpp  qdimacs.cpp  sample-from-file.cpp  speeddating.cpp
quacode/: CMakeLists.txt  README
quacode/examples/: qdimacs.cpp
quacode/privateMisc/: mzn-quacode.sh  printSchedule.sh  readme.txt  results.csv  resultsToTex.sh  results_synthese.txt  runTests.sh
quacode/privateMisc/instances/connect-four/: connectfour-good-01.txt
quacode/privateMisc/instances/matrix-game/: matrix-good-01.txt  matrix-good-02.txt  matrix-good-03.txt  matrix-good-04.txt  matrix-good-05.txt  matrix-good-06.txt  matrix-good-07.txt  matrix-good-08.txt  matrix-good-09.txt  matrix-good-10.txt  matrix-nogood-01.txt  matrix-nogood-02.txt  matrix-nogood-03.txt  matrix-nogood-04.txt  matrix-nogood-05.txt  matrix-nogood-06.txt  matrix-nogood-07.txt  matrix-nogood-08.txt  matrix-nogood-09.txt  matrix-nogood-10.txt
quacode/privateMisc/instances/speed-dating/: description.txt
quacode/privateMisc/instances/speed-dating/Benchmarks/: Christelle_F06_M08_RF00_RM00_FM00_12.csv  F06_M08_RF00_RM02_FM01_08.csv  F06_M08_RF00_RM03_FM02_01.csv  F06_M08_RF00_RM05_FM01_07.csv  F06_M08_RF01_RM02_FM01_16.csv  F06_M08_RF01_RM03_FM00_12.csv  F06_M08_RF01_RM04_FM00_02.csv  F06_M08_RF01_RM04_FM00_09.csv  F06_M08_RF01_RM04_FM03_17.csv  F06_M08_RF02_RM02_FM00_04.csv  F06_M08_RF02_RM02_FM00_15.csv  F06_M08_RF02_RM03_FM02_03.csv  F06_M08_RF02_RM04_FM00_06.csv  F06_M08_RF02_RM04_FM02_13.csv  F06_M08_RF03_RM03_FM00_18.csv  F06_M08_RF03_RM05_FM02_14.csv  F06_M08_RF04_RM02_FM01_11.csv  F06_M08_RF05_RM02_FM00_10.csv  F06_M08_RF05_RM02_FM02_00.csv  F06_M08_RF05_RM04_FM01_19.csv  F06_M08_RF06_RM03_FM05_05.csv  F07_M07_RF00_RM04_FM01_00.csv  F07_M07_RF01_RM01_FM03_03.csv  F07_M07_RF01_RM03_FM00_10.csv  F07_M07_RF01_RM04_FM03_13.csv  F07_M07_RF01_RM05_FM03_05.csv  F07_M07_RF03_RM02_FM02_06.csv  F07_M07_RF03_RM03_FM02_14.csv  F07_M07_RF03_RM03_FM02_16.csv  F07_M07_RF03_RM05_FM01_01.csv  F07_M07_RF03_RM05_FM03_07.csv  F07_M07_RF04_RM01_FM02_15.csv  F07_M07_RF04_RM03_FM01_12.csv  F07_M07_RF04_RM06_FM01_09.csv  F07_M07_RF04_RM06_FM02_17.csv  F07_M07_RF05_RM00_FM02_19.csv  F07_M07_RF05_RM05_FM02_04.csv  F07_M07_RF05_RM05_FM03_02.csv  F07_M07_RF06_RM02_FM00_18.csv  F07_M07_RF06_RM05_FM03_11.csv  (+262 more)
quacode/privateMisc/qecode_pb/: Baker.cpp  COMPILING  MatrixGame.cpp  NimFibo.cpp  compare-matrix-game.sh
quacode/privateMisc/queso_pb/: bakertest.java  connectfourfull.java  linkup_pures.java  matrixgame.java  nimfibo.java  qcsp.java  runit.sh
quacode/quacode/: qspaceinfo.cpp  qspaceinfo.hh  qspaceinfo.hpp
quacode/quacode/qint/branch/: view-values.hpp
quacode/quacode/search/sequential/: qdfs.hh
sibus/: sibus.cpp  sibus.hh  sibus.hpp  traceFromFile
sibus/receivers/: receiver-compil-certif.cpp  receiver-compil-certif.hh  receiver-gecode.cpp  receiver-gecode.hh  receiver-message_queue.cpp  receiver-message_queue.hh  receiver-network.cpp  receiver-network.hh  receiver-nodecount.cpp  receiver-nodecount.hh  receiver-out.cpp  receiver-out.hh  test.cpp
